--- a/assets/main.css
+++ b/assets/main.css
@@ -3,14 +3,14 @@ body {
     background-color: #0f1116;
     color: #ffffff;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20px;
+    margin: 10px;
+    overflow: hidden;
 }
 
 /* Todo List Styles */
 .todo-container {
-    padding: 20px;
-    max-width: 600px;
-    margin: 0 auto;
+    width: 100%;
+    overflow: hidden;
 }
 
 .todo-title {
@@ -19,8 +19,12 @@ body {
     text-align: center;
 }
 
+.todo-input-container {
+    width: 100%;
+}
+
 .todo-input {
-    width: 70%;
+    width: 60%;
     padding: 10px;
     font-size: 1em;
     border: 1px solid #ccc;
@@ -40,14 +44,16 @@ body {
     cursor: pointer;
 }
 
-.add-button:hover {
+/*.add-button:hover {
     background-color: #45a049;
-}
+}*/
 
 .todo-list {
     list-style-type: none;
     padding: 0;
     margin-top: 20px;
+    overflow-y: auto;
+    max-height: 90vh;
 }
 
 .todo-item {
@@ -61,6 +67,17 @@ body {
     background-color: #1f1f1f;
 }
 
+.todo-text {
+    max-width: 70%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    flex: 1;
+    margin-right: 10px;
+    font-size: 1em;
+    color: #ffffff;
+}
+
 .remove-button {
     padding: 5px 10px;
     font-size: 0.9em;
@@ -71,6 +88,6 @@ body {
     cursor: pointer;
 }
 
-.remove-button:hover {
+/*.remove-button:hover {
     background-color: #d32f2f;
-}
+}*/
